# megano-shop

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
megano/api/: urls.py
megano/basket/: admin.py  basket_session.py  models.py  serializers.py  urls.py  views.py
megano/basket/migrations/: 0001_initial.py
megano/catalog/: admin.py  apps.py  models.py  pagination.py  serializers.py  urls.py  views.py
megano/catalog/migrations/: 0001_initial.py
megano/fixtures/: initial_data.json
megano/frontend/static/frontend/assets/js/: app.js  catalog.js  order-detail.js  profile.js  signIn.js  signUp.js
megano/frontend/templates/frontend/: payment.html  profileAvatar.html
megano/megano/: settings.py  urls.py  wsgi.py
megano/orders/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
megano/orders/migrations/: 0001_initial.py
megano/payment/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
megano/payment/migrations/: 0001_initial.py
megano/profiles/: admin.py  models.py  serializers.py  urls.py  views.py
megano/profiles/migrations/: 0001_initial.py
